# light-matrix

./: .gitignore  LICENSE  README.md
bench/: CMakeLists.txt  bench_arith.cpp  bench_base.h  bench_copy.cpp  bench_math.cpp  bench_prng.cpp  bench_reduction.cpp
cmake_modules/: CompilerConfig.cmake  DetectISA.cmake  FindICCLib.cmake  FindLIBM.cmake  FindMKL.cmake  FindSVML.cmake
doc/: Makefile  advanced.rst  basics.rst  conf.py  dev_guide.rst  get_started.rst  index.rst
light_mat/common/: arg_check.h  args_alg.h  array.h  basic_defs.h  block.h  expr_base.h  int_div.h  lang_base.h  mask_type.h  mem_alloc.h  mem_op.h  memalloc.h  memory.h  meta_base.h  metaprog_base.h  preprocess_base.h  prim_types.h  range.h  tie.h  timer.h  type_traits.h  vec_algs.h
light_mat/config/: config.h  platform_config.h  user_config.h
light_mat/core/: arg_check.h  array.h  basic_defs.h  block.h  expr_base.h  lang_base.h  mask_type.h  mem_alloc.h  mem_op.h  metaprog_base.h  prim_types.h  range.h  type_traits.h
light_mat/linalg/: blas.h  blas_extern.h  blas_l1.h  blas_l2.h  blas_l3.h  lapack_chol.h  lapack_fwd.h  lapack_lu.h  lapack_qr.h  lapack_svd.h  lapack_syev.h  linalg_base.h  linalg_fwd.h  matrix_blasl1.h  matrix_blasl2.h
light_mat/mateval/: common_kernels.h  ewise_eval.h  fun_maps.h  macc_policy.h  map_accessors.h  map_expr.h  map_expr_inspect.h  mat_allany.h  mat_arith.h  mat_cast.h  mat_compare.h  mat_emath.h  mat_enorms.h  mat_fold.h  mat_minmax.h  mat_pred.h  mat_reduce.h  mat_zip.h  mateval.h  mateval_fwd.h  matrix_algs.h  matrix_find.h  matrix_ordstats.h  matrix_sort.h  multicol_accessors.h  repvec_expr.h  subs_expr.h  vec_accessors.h
light_mat/matexpr/: dense_accessors.h  full_reduce.h  map_accessors.h  map_expr.h  map_expr_inspect.h  mat_arith.h  mat_cast.h  mat_emath.h  mat_pred.h  mat_special.h  mat_zip.h  matexpr_eval.h  matexpr_fwd.h  matexpr_tools.h  matfun_base.h  matrix_acc_eval.h  matrix_access_base.h  matrix_access_eval.h  matrix_arith.h  matrix_cast.h  matrix_ecomp.h  matrix_elogical.h  matrix_emath.h  matrix_ewise_eval.h  matrix_ewise_expr.h  matrix_transpose.h  partial_reduce.h  repvec_expr.h  subs_expr.h  vector_repeat.h
light_mat/math/: arith_functors.h  avx.h  avx_bpacks.h  avx_math.h  avx_ops.h  avx_packs.h  avx_reduce.h  basic_functors.h  bool_functors.h  comp_functors.h  emath_functors.h  fun_tags.h  functor_base.h  functors.h  logical_functors.h  mask_functors.h  math.h  math_base.h  math_constants.h  math_functors.h  math_special.h  reduction_functors.h  simd.h  (+16 more)
tests/: CMakeLists.txt  linalg_test_base.h  mon_alloc.h  multimat_supp.h  simd_test_base.h  test_arrays.cpp  test_avx_bpacks.cpp  test_avx_math.cpp  test_avx_ops.cpp  test_avx_packs.cpp  test_base.h  test_blasl1.cpp  test_blocks.cpp  test_colwise_reduce.cpp  test_const_mat.cpp  test_cpd_ewise.cpp  test_dense_acc.cpp  test_dense_cast.cpp  test_dense_col.cpp  test_dense_eval.cpp  test_dense_mat.cpp  test_dense_row.cpp  test_dense_vec.cpp  test_dense_veval.cpp  test_direct_trans.cpp  test_ewise_accum.cpp  test_full_reduce.cpp  test_gemv.cpp  test_linear_ewise.cpp  test_main.cpp  test_mat_arith.cpp  test_mat_compare.cpp  test_mat_copy.cpp  test_mat_ebool.cpp  test_mat_ecomp.cpp  test_mat_elogical.cpp  test_mat_emath.cpp  test_mat_fill.cpp  test_mat_matviews.cpp  test_mat_props.cpp  (+25 more)
tests/common/: test_blocks.cpp  test_memory.cpp
tests/linalg/: linalg_test_base.h  test_blas_l1.cpp  test_blas_l2.cpp  test_blas_l3.cpp  test_lapack_chol.cpp  test_lapack_lu.cpp  test_lapack_qr.cpp  test_lapack_svd.cpp  test_lapack_syev.cpp
tests/mateval/: test_colwise_reduce.cpp  test_cpd_ewise.cpp  test_ewise_accum.cpp  test_full_reduce.cpp  test_linear_ewise.cpp  test_map_and_accum.cpp  test_map_expr.cpp  test_mat_allany.cpp  test_mat_arith.cpp  test_mat_cast.cpp  test_mat_compare.cpp  test_mat_emath.cpp  test_mat_find.cpp  test_mat_fold.cpp  test_mat_ordstat.cpp  test_mat_pred.cpp  test_mat_sort.cpp  test_mat_zip.cpp  test_more_reduce.cpp  test_percol_ewise.cpp  test_rowwise_reduce.cpp
tests/matexpr/: matfun_test_base.h  test_cpd_ewise.cpp  test_map_expr.cpp  test_mat_arith.cpp  test_mat_cast.cpp  test_mat_emath.cpp  test_mat_pred.cpp  test_mat_special.cpp  test_mat_zip.cpp  test_repvecs.cpp  test_subs_expr.cpp
tests/math/: simd_test_base.h  test_avx_bpacks.cpp  test_avx_math.cpp  test_avx_ops.cpp  test_avx_reduce.cpp  test_avx_round.cpp  test_simd_math.cpp  test_simd_math_base.h  test_simd_special.cpp  test_sse_bpacks.cpp  test_sse_math.cpp  test_sse_ops.cpp  test_sse_packs.cpp  test_sse_reduce.cpp  test_sse_round.cpp
tests/matrix/: test_dense_eval.cpp  test_dense_mat.cpp  test_dense_vec.cpp  test_direct_trans.cpp  test_mat_asvec.cpp  test_mat_copy.cpp  test_mat_fill.cpp  test_mat_iter.cpp  test_mat_matviews.cpp  test_mat_props.cpp  test_mat_select.cpp  test_mat_vecviews.cpp  test_ref_block.cpp  test_ref_grid.cpp  test_ref_mat.cpp  test_ref_vec.cpp  test_step_vec.cpp  test_transpose_expr.cpp
tests/obsoleted/: test_cpd_ewise.cpp  test_dense_acc.cpp  test_mat_arith.cpp  test_mat_cast.cpp  test_mat_compare.cpp  test_mat_elogical.cpp  test_mat_emath.cpp  test_mat_transpose.cpp  test_vec_rep.cpp
tests/random/: distr_test_base.h  test_bernoulli.cpp  test_binomial.cpp  test_discrete_distrs.cpp  test_discreted.cpp  test_exponential.cpp  test_gammad.cpp  test_geometric.cpp  test_normal.cpp  test_poissond.cpp  test_rand_expr.cpp  test_real_distrs.cpp  test_sample_wor.cpp  test_sfmt.cpp  test_stracker.cpp  test_uniform_int.cpp  test_uniform_real.cpp
tests/random/data/sfmt/: sfmt.000607.txt  sfmt.001279.txt  sfmt.002281.txt  sfmt.004253.txt  sfmt.011213.txt  sfmt.019937.txt  sfmt.044497.txt  sfmt.086243.txt  sfmt.132049.txt  sfmt.216091.txt
tests/simd/: simd_test_base.h  test_avx_arith.cpp  test_avx_bpacks.cpp  test_avx_ops.cpp  test_avx_packs.cpp  test_avx_pred.cpp  test_avx_reduce.cpp  test_avx_round.cpp  test_simd_vec.cpp  test_sse_arith.cpp  test_sse_bpacks.cpp  test_sse_ops.cpp  test_sse_packs.cpp  test_sse_pred.cpp  test_sse_reduce.cpp  test_sse_round.cpp
tools/: code_analysis.py  modules.lst  scan_library.py
(+175 files in other folders)
